# QGraphicsView_bounding_box_bug_solution

./: .gitignore  CMakeLists.txt  README.md
src/: customgraphicspixmapitem.cpp  customgraphicspixmapitem.h  customview.cpp  customview.h  imagecontrol.cpp  imagecontrol.h  imagecontrol.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
